Source/WebCore/rendering/svg/legacy/LegacyRenderSVGEllipse.h
@@ -49,6 +49,8 @@ private:
     void calculateRadiiAndCenter();
 
 private:
+    bool canUseStrokeHitTestFastPath() const;
+
     FloatPoint m_center;
     FloatSize m_radii;
 };
